[tool.poetry]
name = "brena"
version = "0.0.1"
description = "Simple invoice generation."
authors = ["Olaf Górski"]
license = "MIT"
readme = "README.md"

homepage = "https://grski.pl/"  # todo: change this later
repository = "https://github.com/grski/brena"
documentation = "https://github.com/grski/brena"  # todo: change this later
keywords = ["invoice", "invoice generator", "brena"]

[tool.poetry.scripts]
braindead = "brena.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^2.11.1"
toml = "^0.10.0"
WeasyPrint = "^52.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
bandit = "^1.7.0"
autoflake = "^1.4"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
known_future_library = "future"
known_first_party = "constants,context,files,jinja_utils,main,braindead"
include_trailing_comma = "True"
known_third_party = "toml,jinja2,markdown,pygments,toml"
multi_line_output = 3
indent = '    '
skip = "venv,dist,pages,posts,default_template"
sections = "FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

