[tool.poetry]
name = "brena"
version = "0.0.2"
description = "Simple invoice generation."
authors = ["Olaf Górski"]
license = "MIT"
readme = "README.md"

homepage = "https://grski.pl/"  # todo: change this later
repository = "https://github.com/grski/brena"
documentation = "https://github.com/grski/brena"  # todo: change this later
keywords = ["invoice", "invoice generator", "brena"]

[tool.poetry.scripts]
braindead = "brena.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
jinja2 = "^3.1.2"
toml = "^0.10.2"
weasyprint = "^57.1"
yamldb = "^0.1.3"

[tool.poetry.dev-dependencies]
flake8-pyproject = "^1.2.0"
black = "^22.10.0"
isort = "^5.10.1"
bandit = "^1.7.4"
autoflake = "^1.4"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
known_future_library = "future"
known_first_party = "constants,context,files,jinja_utils,main,braindead"
include_trailing_comma = "True"
known_third_party = "toml,jinja2,markdown,pygments,toml"
multi_line_output = 3
indent = '    '
skip = "venv,dist,pages,posts,default_template"
sections = "FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

